# shaderbg

./: Cargo.toml  PKGBUILD  README.md  build.rs
.github/workflows/: build.yml  generate-deb.yml  generate-pkg.yml  generate-rpm.yml  release.yml  test.yml  testing.yml
data/presets/: another_distorted_box.toml  another_flaming_experiment.toml  appolloian_with_a_twist_II.toml  bw_logarithmic_circles_II.toml  clearly_a_bug.toml  colorful_underwater_bubbles_II.toml  complex_atanh.toml  for_the_neon_style_enjoyers.toml  glowing_mountain_lines.toml  glowing_recursive_torus.toml  golden_apollian.toml  gravity_sucks.toml  infinite_boxy_spiral.toml  infinite_hexes_background.toml  just_another_cube.toml  mini_starry_planes.toml  neon_triangular.toml  neonwave_sunrise.toml  pretty_sweet_colors.toml  saturday_hacking.toml  saturday_smoke.toml  saturday_torus.toml  saturday_weirdness.toml  sort_of_a_lavalamp.toml  thinking_inside_the_box_fxaa.toml  towards_the_source_of_life.toml  trailing_the_twinkling_tunnel.toml  truchet_pattern_golden_ratio.toml  tuesday_tinkering.toml  twitter_truchet.toml
debian/: changelog  copyright
doc/: md2man.sh  shaderbg.1  shaderbg.1.md
src/: app.rs  cli.rs  drm.rs  frame_controller.rs  keyboard_controller.rs  main.rs  mouse_controller.rs  preset.rs  screen_controller.rs
src/geometry/: mod.rs  offset.rs  point.rs  rectangle.rs  size.rs  vector2d.rs
src/geometry/tests/: offset.rs  point.rs  rectangle.rs  size.rs
src/renderer/: buffer.rs  check_gl_error.rs  framebuffer.rs  mod.rs  program.rs  render_pass.rs  shader.rs  texture_manager.rs  vertex_array.rs
src/shadertoy/: glsl_depth_tracker.rs  glsl_initializer.rs  glsl_preprocessor.rs  glsl_utils.rs  importer.rs  mod.rs
src/shadertoy/tests/: convert_to_desktop_glsl.rs  glsl_initializer.rs  glsl_preprocessor.rs  glsl_utils.rs
